--- a/index.html
+++ b/index.html
@@ -44,15 +44,7 @@
         <div class="container">
             <div class="title"><h2>About Me</h2></div>
             <div class="text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. 
-                Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet 
-                vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. 
-                Donec eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin 
-                ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, 
-                eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus ut nisl sed, euismod 
-                rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, maur
-                is dapibus tincidunt suscipit, 
-                ex libero aliquet diam, at maximus risus enim non leo.
+                I am a highly skilled Front-End Developer with 5 years of experience in web development. I have a strong foundation in HTML, CSS, JavaScript, and responsive design and I am able to create visually appealing, user-friendly websites that are optimized for all devices. I am able to build and maintain websites using modern web development tools and frameworks. I also have experience working with a team and collaborating with designers, developers, and stakeholders to deliver successful projects. I am always eager to learn new skills and stay up-to-date with the latest web development trends and technologies.
             </div>
         </div>
     </section>
@@ -69,25 +61,38 @@
             </div>
             <div class="cards">
                 <div class="card">
-                    <h3>Employer Name</h3>
-                    <p>Job Title</p>
-                    <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.</div>
+                    <h3>Dalol IT Company/h3>
+                    <p>Front-End Developer</p>
+                    <div class="desc">
+                                * Made high level contributions to a team leading site optimizations.
+                                * Worked with teams to solve issues and find and implement efficiencies.
+                                * Collaborated with product managers to design cutting edge features.
+                                * Worked to create tools that enhanced user interaction in any browser.
+                                * Ensured the technology implemented promoted efficiency, speed, and smooth functionality..</div>
                     <div class="icon">
                         <i class="fa-solid fa-location-dot"></i>
                     </div>
                 </div>
                 <div class="card">
-                    <h3>Employer Name</h3>
-                    <p>Job Title</p>
-                    <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.</div>
+                    <h3>Cairo IT</h3>
+                    <p>JavaScript Developer</p>
+                    <div class="desc">
+                        * Design, develop, test and deploy design features in a timely manner.
+                        * Continually work to ensure the user experience determines design choices.
+                        * Work to achieve a balance between functional and aesthetic designs.
+                        * Maintain brand consistency throughout the design process.
+                        * Apply engineering best practices.
+                        * Work to solve complex challenges with the utilization of modern web application development processes and standard methodologies.
+                        Create wireframes to illustrate advanced solutions for applications.
+                    </div>
                     <div class="icon">
                         <i class="fa-solid fa-location-dot"></i>
                     </div>
                 </div>
                 <div class="card">
-                    <h3>Employer Name</h3>
-                    <p>Job Title</p>
-                    <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.</div>
+                    <h3>Gaza</h3>
+                    <p>Front End Developer</p>
+                    <div class="desc">Build and Develop Responsive websites and mobile Applications.</div>
                     <div class="icon">
                         <i class="fa-solid fa-location-dot"></i>
                     </div>
@@ -106,14 +111,14 @@
                 <h3>Shohadaa el-Maghazi School</h3>
                 <p>High School - Scientific Branch</p>
                 <div class="text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad amet iusto quae libero enim earum, laborum impedit itaque recusandae dolor, eius minima veritatis fugiat deserunt assumenda dicta. Tenetur, quidem? Minus?
+                    Finished high school with 98.6 degree .
                 </div>
         </div>
         <div class="card">
             <h3>Al-Azhar University</h3>
-            <p>Bachelor of Science in Computer Science</p>
+            <p>Bachelor of SoftWare Engeneering</p>
             <div class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad amet iusto quae libero enim earum, laborum impedit itaque recusandae dolor, eius minima veritatis fugiat deserunt assumenda dicta. Tenetur, quidem? Minus?
+                Stil Studying sotware Engeneering in Al Azhar University .
             </div>
         </div>
     </div>
@@ -132,7 +137,7 @@
                 <div class="text">
                     <h3>Clairmy</h3>
                     <p>A website for a Business Company</p>
-                    <a href="#">View Project<i class="fa-solid fa-arrow-right"></i></a>
+                    <a href="https://kamelmaher.github.io/clairmy/">View Project<i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
             <div class="card">
@@ -142,7 +147,7 @@
                 <div class="text">
                     <h3>Nine Zero</h3>
                     <p>A website for a Business Company </p>
-                    <a href="#">View Project<i class="fa-solid fa-arrow-right"></i></a>
+                    <a href="https://kamelmaher.github.io/NineZero/">View Project<i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
             <div class="card">
@@ -162,7 +167,7 @@
                 <div class="text">
                     <h3>High Pixel</h3>
                     <p>A website for a photograohy company</p>
-                    <a href="#">View Project <i class="fa-solid fa-arrow-right"></i></a>
+                    <a href="https://kamelmaher.github.io/plantCare/">View Project <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
             <div class="card">
@@ -172,7 +177,7 @@
                 <div class="text">
                     <h3>X Security</h3>
                     <p>A website for a Security company</p>
-                    <a href="#">View Project <i class="fa-solid fa-arrow-right"></i></a>
+                    <a href="https://kamelmaher.github.io/X-security/">View Project <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
         </div>
